tests/NormalTests/paczka1/fuzzy1/51010281.err
Error in line 15: F4Cv A239 90,3
Error in line 17: 88Xkir S283 87,8
